# ferropress

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
defaults/content/posts/: hello.md
defaults/content/posts/2025/: hello.md
defaults/static/css/: input.css
defaults/templates/: post.html
defaults/templates/layouts/: base.html
defaults/templates/pages/: 404.html  index.html
src/: cmd.rs  engine.rs  main.rs  models.rs
src/cmd/: build.rs  init.rs  serve.rs
src/engine/: assets.rs  parser.rs  render.rs  utils.rs
src/models/: content.rs  paths.rs  render.rs  serve.rs  site.rs
